testData/org/elixir_lang/inspection/unresolvable_module_qualifier/router_helpers_router_missing.ex
defmodule RouterHelpersRouterMissingTest do
  alias Missing.Router.Helpers

  <error descr="Module 'Helpers' is not defined or aliased in this scope">Helpers</error>.device_url(Endpoint, :index, tag_id: 123)
end
